# monty-go

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  go.mod
.github/workflows/: ci.yml  release.yml
include/: monty_ffi.h
monty-ffi/: Cargo.toml  cbindgen.toml
monty-ffi/src/: error.rs  json.rs  lib.rs
pkg/monty/: monty.go  monty_test.go  object.go
