[package]
name = "monty-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
monty = { git = "https://github.com/pydantic/monty", version = "0.0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
thiserror = "1"
num-bigint = "0.4"
